# gvpie

./: .gitignore  CBAC_INTEGRATION_COMPLETE.md  CBAC_SPECIFICATION.md  FILE_SOCKET_IMPLEMENTATION.md  GPU_SOVEREIGNTY_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  PHASE_I_COMPLETE.md  QUICKSTART.md  START_HERE.md  WEEK_1_COMPLETE.md  architecture.md  auto_tasks.json  gitignore  pixel_abi.md  test_cbac_integration.py  trace.json  zero_human_daemon.py
Plugins/PixelOSPlugin/: PixelOSPlugin.uplugin
ai_runtime_rust/: Cargo.toml
ai_runtime_rust/cartridges/: glyph_expander.json  matrix_display.json
ai_runtime_rust/examples/: database_demo.rs  gvpie_development_assistant.rs  logging_demo.rs  monitor_demo.rs
ai_runtime_rust/src/: api.rs  cartridges.rs  config.rs  database.rs  errors.rs  gpu_bridge.rs  gpu_ppl_analyzer.rs  gvpie_analysis.rs  lib.rs  main.rs  models.rs  monitor.rs
ai_runtime_rust/src/logging/: mod.rs  structured.rs
ai_runtime_rust/src/pixel_vm/: mod.rs
ai_runtime_rust/tests/: integration_test.rs
auto_gvpie/: README.md  __init__.py  orchestrator.py  requirements.txt  view_pixels.py
cartridges/: health.ppla  hello.ppla  hello_world.json
cbac_manifests/: default_capabilities.toml
cobol/: hello
contract/: Cargo.toml
contract/src/: lib.rs
docs/: GPU_SELECTION.md
docs/research/: 336_gpu_programming_environment.txt  336_gpu_programming_environment12.txt  336_gpu_programming_environment123.txt  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  EXECUTIVE_SUMMARY.md  PROJECT_SUMMARY.md  README12.md  editor_compute.wgsl  editor_render.wgsl
examples/gpu_sovereign_analyzer/: Cargo.toml
godot-project/: main.tscn  project.godot  rust-gdnative.gdextension
godot-project/rust-gdnative/: Cargo.toml
godot-project/rust-gdnative/cobol/: hello.cbl
godot-project/rust-gdnative/src/: gpu_binary_loader.rs  lib.rs
gpu-protocol/: Cargo.toml
gpu-protocol/src/: lib.rs
gvpie-bootstrap/: Cargo.toml  FREEZE_RITUAL.md  README.md  src.main.rs
gvpie-bootstrap/docs/: FROZEN.md  GPU_REQUIREMENTS.md  IO_CONTRACT.md  UPGRADE_CHECKLIST.md  freeze.manifest
gvpie-bootstrap/scripts/: validate_contract.sh
gvpie-bootstrap/shaders/: contract.wgsl  editor_compute.wgsl  editor_render.wgsl  glyph_expand.wgsl  hex_formatter.wgsl  present.wgsl
gvpie-bootstrap/src/: analysis.rs  boot_loader.rs  canvas.rs  cmd_parser.rs  cpu_interpreter.rs  exec.wgsl  glyph_bootstrap.rs  glyph_rom.rs  gpu_binary_loader.rs  gpu_memory_manager.rs  gpu_requirements.rs  gvx_canvas.rs  hud_overlay.wgsl  hybrid_canvas.rs  improvement_engine.rs  input_mux.rs  io_contract.rs  learning_chatbot.rs  legacy_bridge.rs  lib.rs  lm_studio_bridge.rs  machine_abi.rs  main.rs  memory.rs  pxos_command_interpreter.rs  pxos_db.rs  pxos_event_processor.rs  pxos_interpreter.rs  steering_interface.rs  syscall_translator.rs  text_cpu.rs
gvpie-bootstrap/src/cpu/: ioports.rs  mod.rs  stepper.rs  uart16550.rs
gvpie-bootstrap/src/gpu/: executor.rs
gvpie-bootstrap/src/linux_boot/: bzimage.rs  mod.rs  params.rs
gvpie-bootstrap/src/pixel_language/: assembler.rs  executor.rs  mod.rs  ops.rs  programs.rs
gvpie-bootstrap/src/shaders/: pixel_abi.wgsl  pixel_vm.wgsl  ppl_interpreter.wgsl
gvpie-bootstrap/srcsrc/: legacy_bridge.rs  main.rs
gvpie-bootstrap/tests/: analysis.rs  arithmetic.rs  basic.gvp  test_gpu_executor_simple.rs
gvpie-cbac/: Cargo.toml
gvpie-cbac/src/: capability.rs  delegation.rs  lib.rs  manifest.rs  verifier.rs
gvpie-core/: Cargo.toml
gvpie-core/src/: gpu.rs  lib.rs  (+1 more)
gvpie-daemon/: Cargo.toml
gvpie-daemon/src/: glyph_rom.rs  main.rs  pixel_vm.rs
gvpie-stream/: Cargo.toml
instruction_stepper/: Cargo.toml
legacy-terminal-client/: Cargo.toml
pixelos-ffi/: Cargo.toml  src.rs
ppl_tools/: ppl_asm.py  ppl_run.py
pxl_os/: cartridge_manager.py  fuzzy_font_engine.py  gvpie_bridge.py  pixel_abi.py  pixel_runner.py  pxl_epsilon_vm.py
python_daemon/: README.md  create_db.py  requirements.txt  run_daemon.sh  schema_autonomous.sql  test_bridge.py  zero_human_daemon.py
shaders/: editor_compute.wgsl  editor_render.wgsl  pixel_abi.wgsl  pixel_analyzer.wgsl  pixel_llm.wgsl
tests/: test_bridge_roundtrip.py  test_cartridge_manager.py  test_gpu_executor.py
tools/: emulate_and_review.py  generate_abi.py
(+17 files in other folders)
