[package]
name = "ai-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["gpu"]
gpu = []

[dependencies]
daemonize = "0.5.0"
gvpie-core = { path = "../gvpie-core" }
tokio = { workspace = true }
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1.0"
sha2 = "0.10"
serde_yaml = "0.9.21"
chrono = { version = "0.4.31", features = ["serde"] }
sysinfo = "0.30"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }

[dev-dependencies]

tokio = { version = "1.0", features = ["full"] }

serial_test = "0.9.0"
tempfile = "3.3"
tower = { version = "0.4", features = ["full"] }
hyper = { version = "0.14", features = ["client", "http1"] }
