[package]
name = "gvpie-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
indexmap = "=2.2.6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }


[profile.release]
opt-level = 3
