[package]
name = "gvpie-cbac"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
toml = "0.8"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
