[package]
name = "gvpie-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20"
pollster = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }

[profile.release]
opt-level = 3
