[package]
name = "rust-gdnative"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
webrtc = "0.14.0"
tokio = { version = "1", features = ["full"] }
wgpu = "0.19"
elf = "0.7"
anyhow = "1.0"
bincode = "1.3.3"
log = "0.4"
pollster = "0.3"
